--- a/OceanFishin.csproj
+++ b/OceanFishin.csproj
@@ -48,7 +48,7 @@
 		</Reference>
 		<Reference Include="Newtonsoft.Json">
 			<HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Newtonsoft.Json.dll</HintPath>
-			<Private>false</Private>
+			<Private>true</Private>
 		</Reference>
 		<Reference Include="FFXIVClientStructs">
 			<HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\FFXIVClientStructs.dll</HintPath>
@@ -58,6 +58,12 @@
 		  <Private>false</Private>
 		</Reference>
 
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="bait.json">
+	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 	<ItemGroup>
