--- a/OceanFishin.csproj
+++ b/OceanFishin.csproj
@@ -48,7 +48,7 @@
 		</Reference>
 		<Reference Include="Newtonsoft.Json">
 			<HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Newtonsoft.Json.dll</HintPath>
-			<Private>true</Private>
+			<Private>false</Private>
 		</Reference>
 		<Reference Include="FFXIVClientStructs">
 			<HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\FFXIVClientStructs.dll</HintPath>
