--- a/OceanFishin.csproj
+++ b/OceanFishin.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net472</TargetFramework>
-		<LangVersion>9.0</LangVersion>
+		<TargetFramework>net5.0-windows</TargetFramework>
+		<LangVersion>latest</LangVersion>
 		<PackageId>OceanFishin'</PackageId>
 		<Authors>Sl0nderman</Authors>
 		<Version>2.0</Version>
@@ -31,7 +31,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="DalamudPackager" Version="1.2.2" />
-		<PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+		<PackageReference Include="System.Numerics.Vectors" Version="4.5.0">
+			<Private>false</Private>
+		</PackageReference>
 		<Reference Include="Dalamud">
 			<HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Dalamud.dll</HintPath>
 			<Private>false</Private>
@@ -46,10 +48,6 @@
 		</Reference>
 		<Reference Include="Lumina">
 			<HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Lumina.dll</HintPath>
-			<Private>false</Private>
-		</Reference>
-		<Reference Include="Lumina.Generated">
-			<HintPath>$(AppData)\XIVLauncher\addon\Hooks\dev\Lumina.Generated.dll</HintPath>
 			<Private>false</Private>
 		</Reference>
 		<Reference Include="Newtonsoft.Json">
@@ -94,7 +92,7 @@
 
 	<ItemGroup>
 	  <None Update="bait.json">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </None>
 	</ItemGroup>
 	
