--- a/OceanFishin.csproj
+++ b/OceanFishin.csproj
@@ -107,11 +107,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="res\" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Compile Update="Strings.en.Designer.cs">
+	  <Compile Update="Properties\Strings.en.Designer.cs">
 	    <DesignTime>True</DesignTime>
 	    <AutoGen>True</AutoGen>
 	    <DependentUpon>Strings.en.resx</DependentUpon>
@@ -119,15 +115,19 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <EmbeddedResource Update="Strings.de.resx">
-	    <Generator>ResXFileCodeGenerator</Generator>
+	  <EmbeddedResource Update="Properties\Strings.de.resx">
+	    <Generator>PublicResXFileCodeGenerator</Generator>
 	  </EmbeddedResource>
-	  <EmbeddedResource Update="Strings.en.resx">
-	    <Generator>ResXFileCodeGenerator</Generator>
+	  <EmbeddedResource Update="Properties\Strings.en.resx">
+	    <Generator>PublicResXFileCodeGenerator</Generator>
 	    <LastGenOutput>Strings.en.Designer.cs</LastGenOutput>
 	  </EmbeddedResource>
-	  <EmbeddedResource Update="Strings.fr.resx">
-	    <Generator>ResXFileCodeGenerator</Generator>
+	  <EmbeddedResource Update="Properties\Strings.fr.resx">
+	    <Generator>PublicResXFileCodeGenerator</Generator>
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+	  </EmbeddedResource>
+	  <EmbeddedResource Update="Properties\Strings.jp.resx">
+	    <Generator>PublicResXFileCodeGenerator</Generator>
 	  </EmbeddedResource>
 	</ItemGroup>
 	
